--- a/potrfolio/css/header.css
+++ b/potrfolio/css/header.css
@@ -3,19 +3,19 @@
 .header {
 	background-color: #F1B7C8;
 	min-height: 60px;
-	 
+	
  }
 .header__container {
-	 display: flex;
-	 justify-content: space-between;
-	 padding-top: 13px;
-	 padding-bottom: 13px;
-	 align-items: center;
+ display: flex;
+ justify-content: space-between;
+ padding-top: 13px;
+ padding-bottom: 13px;
+ align-items: center;
  }
  
  .header__logo {
-	 width: 124px;
-	 
+ width: 124px;
+ 
  }
  .header__contacts {
 	 position: absolute;
@@ -33,10 +33,57 @@
 	height: 14px;
 	background-image: url(../img/menu.svg)
  }.
- 
- .
-=======
->>>>>>> e3021b4c9e5eedde15254023fdfc41ff09d265d9
-=======
->>>>>>> e3021b4c9e5eedde15254023fdfc41ff09d265d9
- 
+
+
+.contacts__head{
+	margin-bottom: 7px;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 25px;
+	text-transform: uppercase;
+}
+.contacts__head_social{
+	margin-bottom: 12px;
+}
+.contacts__item:not(:last-child){
+margin-bottom: 50 px;
+}
+.contacts__link{
+	
+	font-size: 16px;
+	line-height: 22px;
+}
+.contacts__social-list{
+display: flex;
+
+}
+.contacts__social-item{ /*:not(:last-child)*/
+margin-right: 18px;
+}
+.contacts__social-item:last-child{
+	margin-right: 0;
+}
+.contacts__social-link{
+	display: block;
+	width: 158px;
+	height: 26px;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.contacts__social-link_whatsup{
+background-image: url(../img/whatsupp.svg);
+}
+
+.contacts__social-link_instagram{
+background-image: url(../img/instagram.svg);
+}
+
+.contacts__social-link_facebook{
+background-image: url(../img/facebook.svg);
+}
+
+.contacts__social-link_telegram{
+background-image: url(../img/telegram.svg);
+}
+
