--- a/potrfolio/css/default.css
+++ b/potrfolio/css/default.css
@@ -48,9 +48,42 @@ h1, h2, h3, p {
     margin: 0;
 }
 .container {
+    max-width: 1100px;
     padding: 0 15px; /* верх-низ лево-право*/
     margin: 0 auto; /* верх-низ лево-право*/
 } 
 section {
     padding: 30px 0;
+}
+@media (min-width: 768px) {
+	.container {
+		padding: 0 40px;
+	}
+
+}
+@media (min-width: 992px) {   
+    .page__header {
+        width: 240px;
+        position: fixed; 
+        left: 0;
+		top: 0;
+		height: 100%;
+    }
+}
+@media (min-width: 1440px) {   
+    .page {
+        background-image: linear-gradient(to right, #A1B7C8 25%, transparent 25.5% );
+    }
+    
+    .page__header {
+        width: 355px; /*1440px - 355px чтобы вычислить градиен выше*/
+       	left: calc(50%-720px);
+		
+    }
+}
+@media (min-width: 2700px) {   
+    .page {
+        background-image: linear-gradient(to right, #A1B7C8 30%, transparent 30% );
+    }
+    
 }
