--- a/potrfolio/css/index.css
+++ b/potrfolio/css/index.css
@@ -1,6 +1,8 @@
 @import 'normalize.css';
+@import 'swiper-bundle.min.css';
 @import 'fonts.css';
 @import 'default.css';
 @import 'header.css';
 @import 'present.css';
 @import 'adventage.css';
+@import 'portfolio.css';
