--- a/potrfolio/css/portfolio.css
+++ b/potrfolio/css/portfolio.css
@@ -85,17 +85,22 @@ margin-bottom: 40px;
     }
 }
 @media (min-widht: 480px) {
-    .portfolio_slider {
+    .portfolio__slider {
+    max-width: 688px
+    }
+}
+@media (min-widht: 768px) {
+    .portfolio__slider {
     max-width: 688px
     }
 }
 @media (min-widht: 992px) {
-    .portfolio_slider {
+    .portfolio__slider {
     max-width: 690px
     }
 }
 @media (min-widht: 1440px) {
-    .portfolio_slider {
+    .portfolio__slider {
         max-width: 825px
     
     }
@@ -104,10 +109,10 @@ margin-bottom: 40px;
 
     }
     .card__date {
-        font-style: 16px;
+        font-size 16px;
     }
     .card__title {
-        font-style: 18px;
+        font-size: 18px;
     }
     .card {
         max-width: 366px;
