--- a/potrfolio/css/header.css
+++ b/potrfolio/css/header.css
@@ -9,6 +9,7 @@
  }
 .header__container {
  display: flex;
+ 
  justify-content: space-between;
  
  align-items: center;
@@ -121,6 +122,7 @@ background-image: url(../img/telegram.svg);
 		height: 100%;
 		flex-direction: column;
 		align-items: flex-end; /* прижать к краю*/
+		padding: 0 20px;
 	}
 	.header__contacts-burger {
 		display: none;
